* MB 8.0

JDK 1.3 support.

Nearly all remaining references to "ALP" have been replaced by
project-neutral names, often "COUGAAR".  See core/doc/8.0/unalp for
the conversion script (in perl) which was used and unalp.out for the
output of that conversion script.  Documentation files were generally
not changed, so you will continue to see references to old symbols in
ChangeLogs and so forth.  The following classes were renamed as a
result of running the script:
glm/src/org/cougaar/domain/glm/ldm/plan/ALPRelationship.java -> GLMRelationship.java
glm/src/org/cougaar/domain/glm/ldm/asset/ALPAsset.java -> GLMAsset.java
glm/src/org/cougaar/domain/glm/ldm/ALPFactory.java -> GLMFactory.java
glm/src/org/cougaar/domain/glm/ldm/ALPDomain.java -> GLMDomain.java
glm/src/org/cougaar/domain/glm/util/GLMAsset.java -> AssetUtil.java
glm/src/org/cougaar/domain/mlm/ui/views/ALPConsumer.java -> MLMConsumer.java
glm/src/org/cougaar/domain/mlm/ui/producers/ALPProducer.java -> MLMProducer.java
glm/src/org/cougaar/domain/mlm/ui/producers/ThreadedALPProducer.java -> ThreadedMLMProducer.java
core/src/org/cougaar/core/cluster/ALPPlanServesLogicProvider.java -> WhiteboardServesLogicProvider.java
core/src/org/cougaar/core/cluster/XPlanServesALPPlan.java -> XPlanServesWhiteboard.java
core/src/org/cougaar/core/cluster/ALPPlan.java -> Whiteboard.java
server/src/org/cougaar/tools/server/ALPServer.java -> NodeServer.java
server/src/org/cougaar/tools/server/RemoteALPServer.java -> RemoteNodeServer.java
server/src/org/cougaar/tools/server/RemoteALPServerImpl.java -> RemoteNodeServerImpl.java

* MB 7.2

Minor patches.  Released as a separate supported build as the basis
for Alpine's 2001 demo branch line (branch tag "V7_2").

* MB 7.0.2

Minor Patches.  Released as a separate supported build because of
patch buildup.

* MB 7.0.1

Default database connection information has been moved out of all
standard ".q" and ".cfg" files.  This means that Parameters are now 