@@ -25,6 +25,11 @@ import org.cougaar.core.cluster.ClusterServesLogicProvider;
  * Domain classes must also implement a static
  * create() method so that they can be constructed
  * by the infrastructure.
+ *
+ * Domains may optionally implement <pre>Collection<String> getAliases()</pre>
+ * to present alias names to the domain manager.  This feature is likely
+ * to be removed in short order, as it is only to allow backward-compatability
+ * when domain names change.  Use of domain aliases may result in warnings.
  **/
 
 public interface Domain 
@@ -35,7 +40,8 @@ public interface Domain
   Factory getFactory(LDMServesPlugIn ldm);
 
   /** initialize Domain. Called once on a new instance immediately
-   * after creating the Domain instance via the zero-argument constructor.
+   * after creating the Domain instance via the zero-argument constructor,
+   * but before the DomainManager adds the Domain to the domain list.
    **/
   void initialize();
 
@@ -46,5 +52,11 @@ public interface Domain
   Collection createLogicProviders(WhiteboardServesLogicProvider logplan, 
                                   ClusterServesLogicProvider cluster);
 
+  /**
+   * Allow the domain to specify an XPlan for use by its LogicProviders.
+   * This allows the domain's LPs to have custom collections/subscriptions
+   * for efficiency rather than having to do slow searches every time.
+   **/
   XPlanServesWhiteboard createXPlan(java.util.Collection existingXPlans);
+
 }
