@@ -1,3 +1,9 @@
+2001-03-30  Michael Thome  <mthome@bbn.com>
+
+	* Domain, DomainManager, ClusterImpl
+	Support optional domain-name aliases for Domains.  See Domain
+	javadoc for information.
+	
 2001-03-29  Michael Thome  <mthome@bbn.com>
 
 	* unalp
