@@ -1,6 +1,8 @@
 * MB 8.0
 
-JDK 1.3 support.
+JDK 1.3 support.  For the most part, this is a port of javaiopatch,
+but we are also using the RMI1.2 protocol exclusively, and a number of
+methods have changed exception handing slightly.
 
 Nearly all remaining references to "ALP" have been replaced by
 project-neutral names, often "COUGAAR".  See core/doc/8.0/unalp for
@@ -23,6 +25,14 @@ core/src/org/cougaar/core/cluster/ALPPlan.java -> Whiteboard.java
 server/src/org/cougaar/tools/server/ALPServer.java -> NodeServer.java
 server/src/org/cougaar/tools/server/RemoteALPServer.java -> RemoteNodeServer.java
 server/src/org/cougaar/tools/server/RemoteALPServerImpl.java -> RemoteNodeServerImpl.java
+
+What had been called the "alp" domain should now be loaded as
+"glm".  To support this, Domains may implement a method to return
+alias names.  Use of the aliases results in a warning, but otherwise
+everything will work - Aliases may be disabled at some point to force
+people to use the official name exclusively.  All core modules have
+been updated to use "glm" over "alp", but "alp" and "mlm" may also be
+used in the interim.
 
 * MB 7.2
 
